# EduPort-Backend

./: .env  .flake8  .gitignore  README.md  pyproject.toml
authentication/: constants.py  urls.py
authentication/serializers/: __init__.py  admin_auth_serializer.py  token_refresh_serializer.py  user_auth_serializer.py
authentication/views/: __init__.py  admin_auth.py  otp_varification.py  refresh_token.py  user_auth.py
backend/: settings.py  urls.py
metacontent/: admin.py  apps.py  urls.py
metacontent/migrations/: 0001_initial.py
metacontent/models/: __init__.py  country.py  qualification.py  state.py
metacontent/resources/: country_list.py  qualification_list.py  state_list.py
metacontent/serializers/: __init__.py  countries.py  qualifications.py  states.py
metacontent/views/: __init__.py  countries.py  qualifications.py  states.py
routes/: routes.py  urls.py  views.py
templates/mail_templates/: mail_verify.html
userprofile/: admin.py  constants.py  urls.py
userprofile/migrations/: 0001_initial.py  0002_instructorprofile.py  0003_alter_useraddress_area_alter_useraddress_pin_code.py  0004_alter_userprofile_options.py  0005_remove_instructorprofile_address_and_more.py  0006_userprofile_otp.py  0007_otpvalidation.py  0008_otpvalidation_updated_at.py
userprofile/models/: __init__.py  instructor_profile.py  professional_details.py  user_profile.py
userprofile/serializers/: __init__.py  instructor_profile.py  instructor_profile_update.py
userprofile/views/: __init__.py  instructor_profile.py
utils/: __init__.py  generate_otp.py
(+2 files in other folders)
